<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="dev.cguagliano.fitnesstrax.addfood" >
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#1fb6ff"
            android:minHeight="?actionBarSize"
            xmlns:android="http://schemas.android.com/apk/res/android">
            <ImageView
                android:layout_width="295dp"
                android:layout_height="?actionBarSize"
                android:gravity="center_horizontal"
                android:src="@drawable/fitnesswithman"
                android:contentDescription="@string/fitnesstrax" />
        </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="?actionBarSize">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="This is the ADDFOOD page"/>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left|start"
        android:background="#3c5a69" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:text="Jim Jones"
            android:textColor="@android:color/white"
            android:textSize="21sp"/>
        <TextView
            android:id="@+id/textViewHOME"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#0a85c0"
            android:paddingStart="16dp"/>
        <TextView
            android:id="@+id/textViewPROFILE"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingStart="16dp"/>
        <TextView
            android:id="@+id/textViewFOODLOG"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/foodlog"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#0a85c0"
            android:paddingStart="16dp"/>
        <TextView
            android:id="@+id/textViewADDFOOD"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/addfood"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingStart="16dp"/>
        <TextView
            android:id="@+id/textViewSEARCH"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#0a85c0"
            android:paddingStart="16dp"/>
        <TextView
            android:id="@+id/textViewPROGRESS"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/progress"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:paddingStart="16dp"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>