<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="dev.cguagliano.fitnesstrax.HOMESCREEN" >
    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?actionBarSize"
    android:background="#1fb6ff"
    android:minHeight="?actionBarSize"
    xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView
        android:layout_width="295dp"
        android:layout_height="?actionBarSize"
        android:gravity="center_horizontal"
        android:src="@drawable/fitnesswithman"
        android:contentDescription="@string/fitnesstrax" />
    </android.support.v7.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingTop="?actionBarSize">
        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/welcome"
            android:textSize="22sp"
            android:background="#cae1ed"
            android:gravity="center_horizontal"
            android:padding="14dp" /></LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/button_profile"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="#3c5a69"
                android:src="@drawable/profilebutton" />
            <ImageButton
                android:id="@+id/button_foodlog"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="#306681"
                android:src="@drawable/foodlogbutton"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/button_addfood"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="#306681"
                android:src="@drawable/addfoodbutton"/>
            <ImageButton
                android:id="@+id/button_searchnut"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="#3c5a69"
                android:src="@drawable/searchnutbutton"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/button_progress"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="#3c5a69"
                android:src="@drawable/progressbutton"/>
            <ImageButton
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:scaleType="centerInside"
                android:background="#306681" />
        </LinearLayout>
        </LinearLayout>
    </FrameLayout>
    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="left|start"
        android:background="#3c5a69" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textAlignment="center"
            android:text="Jim Jones"
            android:textColor="@android:color/white"
            android:textSize="21sp"/>
        <TextView
            android:id="@+id/textViewHOME"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/home"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#0a85c0"/>
        <TextView
            android:id="@+id/textViewPROFILE"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/profile"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textViewFOODLOG"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/foodlog"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#0a85c0"/>
        <TextView
            android:id="@+id/textViewADDFOOD"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/addfood"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/textViewSEARCH"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/search"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:background="#0a85c0"/>
        <TextView
            android:id="@+id/textViewPROGRESS"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/progress"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>
    </LinearLayout>
</android.support.v4.widget.DrawerLayout>